--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -42,6 +42,20 @@
             <li class="nav-item">
                 <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#submenu-app">
                 <span>
+                    <span class="sidebar-icon"><span class="fas fa-table"></span></span>
+                    TOEFL Writing
+                </span>
+                <span class="link-arrow"><span class="fas fa-chevron-right"></span></span>
+                </span>
+                <div class="multi-level collapse " role="list" id="submenu-app" aria-expanded="false">
+                    <ul class="flex-column nav">
+                        <li class="nav-item "><a class="nav-link" href="/correction/add_correction/toefl/create_integrated"><span>Integrated</span></a></li>
+                    </ul>
+                </div>
+            </li>
+            <li class="nav-item">
+                <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#submenu-app">
+                <span>
                     <span class="sidebar-icon"><span class="fas fa-table"></span></span> 
                     Tables
                 </span>
