--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -40,14 +40,14 @@
                 </a>
             </li>
             <li class="nav-item">
-                <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#submenu-app">
+                <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#toefl-writing">
                 <span>
                     <span class="sidebar-icon"><span class="fas fa-table"></span></span>
                     TOEFL Writing
                 </span>
                 <span class="link-arrow"><span class="fas fa-chevron-right"></span></span>
                 </span>
-                <div class="multi-level collapse " role="list" id="submenu-app" aria-expanded="false">
+                <div class="multi-level collapse " role="list" id="toefl-writing" aria-expanded="false">
                     <ul class="flex-column nav">
                         <li class="nav-item "><a class="nav-link" href="/correction/add_correction/toefl/create_integrated"><span>Integrated</span></a></li>
                     </ul>
