--- a/correction/templates/show_corrections.html
+++ b/correction/templates/show_corrections.html
@@ -42,9 +42,11 @@
                                   {{ correction.question_type_data.type_number }}
                               </td>
                               <td class="border-0">
-                                  {% if correction.correction is null %}
+                                  {% if correction.get_status_display == "Pending" %}
                                   <span class="text-warning font-weight-bold">Pending</span>
-                                  {% else %}
+                                  {% elif correction.get_status_display == "Invalid" %}
+                                  <span class="text-error font-weight-bold">Invalid</span>
+                                  {% elif correction.get_status_display == "Corrected" %}
                                   <span class="text-success font-weight-bold">Corrected</span>
                                   {% endif %}
                               </td>
