--- a/correction/templates/show_correction.html
+++ b/correction/templates/show_correction.html
@@ -15,8 +15,8 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="card card-body bg-white border-light shadow-sm mb-4 min-vh-100">
-                        {{ correction.correction|markdownify }}
+                    <div class="card card-body bg-white border-light shadow-sm mb-4 min-vh-100" style="text-align: justify">
+                        {{ correction.correction|markdownify|linebreaks }}
                     </div>
                 </div>
             </div>
