Make "Invalid" red in show_corrections

--- a/correction/templates/show_corrections.html
+++ b/correction/templates/show_corrections.html
@@ -45,7 +45,7 @@
                                   {% if correction.get_status_display == "Pending" %}
                                   <span class="text-warning font-weight-bold">Pending</span>
                                   {% elif correction.get_status_display == "Invalid" %}
-                                  <span class="text-error font-weight-bold">Invalid</span>
+                                  <span class="text-danger font-weight-bold">Invalid</span>
                                   {% elif correction.get_status_display == "Corrected" %}
                                   <span class="text-success font-weight-bold">Corrected</span>
                                   {% endif %}
