--- a/correction/templates/toefl/create_independent.html
+++ b/correction/templates/toefl/create_independent.html
@@ -12,18 +12,18 @@
 
         {% include 'includes/navigation.html' %}
 
-        <form action="{% url 'create_toefl_integrated' %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'create_toefl_independent' %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             <div class="row">
                 <div class="col-12">
                     <div class="card card-body bg-white border-light shadow-sm mb-4">
-                        <h2 class="h5 mb-4">TOEFL Writing Integrated</h2>
+                        <h2 class="h5 mb-4">TOEFL Writing Independent</h2>
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <div class="mb-4">
                                     <label class="my-1 mr-2" for="exam_db_name">Exam Type</label>
                                     <select class="form-select" id="exam_db_name" aria-label="Default select example" name="exam_db_name">
-                                        <option value="1" {% if exam_db_name == "1" %}selected{% endif %}>TPO</option>
+{#                                        <option value="1" {% if exam_db_name == "1" %}selected{% endif %}>TPO</option>#}
                                         <option value="2" {% if exam_db_name == "2" %}selected{% endif %}>NEO</option>
                                     </select>
                                 </div>
