Edit typo in show_corrections.html

--- a/correction/templates/show_corrections.html
+++ b/correction/templates/show_corrections.html
@@ -36,7 +36,7 @@
                                   {{ correction.question_type_data.get_exam_type_display }}
                               </td>
                               <td class="border-0">
-                                  {{ correction.question_type_data.get_exam_db_display }}
+                                  {{ correction.question_type_data.get_exam_db_name_display }}
                               </td>
                               <td class="border-0">
                                   {{ correction.question_type_data.exam_db_number }}
