--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -27,6 +27,12 @@
                 <span>Dashboard</span>
                 </a>
             </li>
+            <li class="nav-item  {% if 'plans' in segment %} active {% endif %}">
+                <a href="{% url 'subscription_plans' %}" class="nav-link">
+                <span class="sidebar-icon"><span class="fas fa-shopping-cart"></span></span>
+                <span>Plans</span>
+                </a>
+            </li>
             <li class="nav-item  {% if 'transactions' in segment %} active {% endif %}">
                 <a href="/transactions.html" class="nav-link">
                     <span class="sidebar-icon"><span class="fas fa-hand-holding-usd"></span></span>
