Activate sidebar links when user is in their page

--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -51,7 +51,7 @@
                     <span>Corrections</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item  {% if 'toefl_writing' in segment %} active {% endif %}">
                 <span class="nav-link  collapsed  d-flex justify-content-between align-items-center" data-toggle="collapse" data-target="#toefl-writing">
                 <span>
                     <span class="sidebar-icon"><span class="fas fa-table"></span></span>
