--- a/correction/templates/show_corrections.html
+++ b/correction/templates/show_corrections.html
@@ -51,11 +51,11 @@
                                   {% endif %}
                               </td>
                               <td class="border-0">
-                                  {% if correction.get_status_display == "Corrected" %}
+{#                                  {% if correction.get_status_display == "Corrected" %}#}
                                   <a href="{% url 'show_correction' correction_id=correction.id %}">
-                                      <span class="fas fa-eye fa-lg text-success"></span>
+                                      <span class="fas fa-eye fa-lg text-info" title="Show Correction"></span>
                                   </a>
-                                  {% endif %}
+{#                                  {% endif %}#}
                               </td>
                           </tr>
                           <!-- End of Item -->
