--- a/correction/templates/show_correction.html
+++ b/correction/templates/show_correction.html
@@ -22,9 +22,9 @@
                         </div>
                         <hr>
                         {% if correction.correction == "" %}
-                        <p>Not corrected yet</p>
+                        <p class="text-warning">Not corrected yet</p>
                         {% elif correction.get_status_display == "Invalid" %}
-                        <p>Unfortunately, the answer is not about the selected question.</p>
+                        <p class="text-danger">Unfortunately, the answer is not about the selected question.</p>
                         {% else %}
                         <div>
                             {{ correction.correction|render_markdown }}
