--- a/core/templates/includes/navigation.html
+++ b/core/templates/includes/navigation.html
@@ -20,7 +20,7 @@
 {#                        <span class="icon-badge rounded-circle unread-notifications"></span>#}
 {#                      </span>#}
 {#                    </a>#}
-{#                    <div class="dropdown-menu dashboard-dropdown dropdown-menu-lg dropdown-menu-center mt-2 py-0">#}
+{#                    <div class="dropdown-menu dashboard.html-dropdown dropdown-menu-lg dropdown-menu-center mt-2 py-0">#}
 {#                      <div class="list-group list-group-flush">#}
 {#                        <a href="#" class="text-center text-primary font-weight-bold border-bottom border-light py-3">Notifications</a>#}
 {#                        <a href="#" class="list-group-item list-group-item-action border-bottom border-light">#}
@@ -125,17 +125,17 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link pt-1 px-0" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       <div class="media d-flex align-items-center">
-                        <img class="user-avatar md-avatar rounded-circle" alt="Image placeholder" src="{{ request.user.profile.get_avatar }}">
                         <div class="media-body ml-2 text-dark align-items-center d-none d-lg-block">
                           <span class="mb-0 font-small font-weight-bold">
                             {{ request.user.username }}
                           </span>
                         </div>
+                        <img class="ml-2 user-avatar md-avatar rounded-circle" alt="Image placeholder" src="/static/assets/img/team/default-profile-picture.png">
                       </div>
                     </a>
                     <div class="dropdown-menu dashboard-dropdown dropdown-menu-right mt-2">
-                      <a class="dropdown-item font-weight-bold" href="{% url 'profile' %}"><span class="fas fa-cog"></span>Settings</a>
-                      <div role="separator" class="dropdown-divider"></div>
+{#                      <a class="dropdown-item font-weight-bold" href="{% url 'profile' %}"><span class="fas fa-cog"></span>Settings</a>#}
+{#                      <div role="separator" class="dropdown-divider"></div>#}
                       <a class="dropdown-item font-weight-bold" href="{% url 'logout' %}">
                           <span class="fas fa-sign-out-alt text-danger"></span>Logout</a>
                     </div>
