--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -21,7 +21,7 @@
             </div>
             </div>
             <ul class="nav flex-column">
-            <li class="nav-item  {% if 'dashboard' in segment %} active {% endif %}">
+            <li class="nav-item  {% if 'dashboard.html' in segment %} active {% endif %}">
                 <a href="/dashboard.html" class="nav-link">
                 <span class="sidebar-icon"><span class="fas fa-chart-pie"></span></span>
                 <span>Dashboard</span>
@@ -39,12 +39,12 @@
                     <span>Transactions</span>
                 </a>
             </li>
-            <li class="nav-item  {% if 'profile' in segment %} active {% endif %}">
-                <a href="{% url 'profile' %}" class="nav-link">
-                    <span class="sidebar-icon"><span class="fas fa-cog"></span></span>
-                    <span>Settings</span>
-                </a>
-            </li>
+{#            <li class="nav-item  {% if 'profile' in segment %} active {% endif %}">#}
+{#                <a href="{% url 'profile' %}" class="nav-link">#}
+{#                    <span class="sidebar-icon"><span class="fas fa-cog"></span></span>#}
+{#                    <span>Settings</span>#}
+{#                </a>#}
+{#            </li>#}
             <li class="nav-item  {% if 'corrections' in segment %} active {% endif %}">
                 <a href="{% url 'show_corrections' %}" class="nav-link">
                     <span class="sidebar-icon"><span class="fas fa-file"></span></span>
