--- a/core/templates/accounts/otp.html
+++ b/core/templates/accounts/otp.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base-fullscreen.html" %}
 
-{% block title %} Login {% endblock %} 
+{% block title %} OTP Authentication {% endblock %} 
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -20,7 +20,7 @@
 
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Django Volt - Sign IN
+                                    Django Volt - OTP Authentication
                                 </h1>
                                 <br />
                                 <p>
@@ -38,14 +38,17 @@
 
                                 <!-- Form -->
                                 <div class="form-group mb-4">
-                                    <label>Phone Number</label>
+                                    <label>OTP code</label>
                                     <div class="input-group">
                                         <span class="input-group-text" id="basic-addon1"><span class="fas fa-user-circle"></span></span>
-                                        {{ form.phone_number_user_name }}
+                                        {{ form.otp_code }}
                                     </div>  
-                                    <span class="text-danger">{{ form.phone_number_user_name.errors }}</span>
+                                    <span class="text-danger">{{ form.otp_code.errors }}</span>
                                 </div>
                                 <!-- End of Form -->
+                                <div>
+                                    <input hidden="hidden" name="phone_number_user_name" value="{{ phone_number_user_name }}">
+                                </div>
                                 <div class="form-group">
                                     <div class="d-flex justify-content-between align-items-center mb-4">
                                         <div class="form-check">
