--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -44,56 +44,40 @@
 
                                     <!-- Form -->
                                     <div class="form-group mb-4">
-                                        <label for="email">Username</label>
+                                        <label>First Name</label>
                                         <div class="input-group">
-                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-user-shield"></span></span>
-                                            {{ form.username }}
+                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-user"></span></span>
+                                            {{ form.first_name }}
                                         </div>
-                                        <span class="text-error">{{ form.username.errors }}</span>
+                                        <span class="text-danger">{{ form.first_name.errors }}</span>
                                     </div>
                                     <!-- End of Form -->
 
                                     <!-- Form -->
                                     <div class="form-group mb-4">
-                                        <label for="email">Your Email</label>
+                                        <label>Last Name</label>
                                         <div class="input-group">
-                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-envelope"></span></span>
-                                            {{ form.email }}
+                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-user"></span></span>
+                                            {{ form.last_name }}
                                         </div>
-                                        <span class="text-error">{{ form.email.errors }}</span>
+                                        <span class="text-danger">{{ form.last_name.errors }}</span>
+                                    </div>
+                                    <!-- End of Form -->
+
+                                    <!-- Form -->
+                                    <div class="form-group mb-4">
+                                        <label>Phone Number (+98)</label>
+                                        <div class="input-group">
+                                            <span class="input-group-text" id="basic-addon3"><span class="fas fa-mobile"></span></span>
+                                            {{ form.phone_number_user_name }}
+                                        </div>
+                                        <span class="text-danger">{{ form.phone_number_user_name.errors }}</span>
                                     </div>
                                     <!-- End of Form -->
 
                                     <div class="form-group">
 
-                                        <!-- Form -->
-                                        <div class="form-group mb-4">
-                                            <label for="password">Password</label>
-                                            <div class="input-group">
-                                                <span class="input-group-text" id="basic-addon4"><span class="fas fa-unlock-alt"></span></span>
-                                                {{ form.password1 }}
-                                            </div>  
-                                            <span class="text-error">{{ form.password1.errors }}</span>
-                                        </div>
-                                        <!-- End of Form -->
-
-                                        <!-- Form -->
-                                        <div class="form-group mb-4">
-                                            <label for="password">Password Check</label>
-                                            <div class="input-group">
-                                                <span class="input-group-text" id="basic-addon4"><span class="fas fa-unlock-alt"></span></span>
-                                                {{ form.password2 }}
-                                            </div>  
-                                            <span class="text-error">{{ form.password2.errors }}</span>
-                                        </div>
-
                                         <div class="d-flex justify-content-between align-items-center mb-4">
-                                            <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="defaultCheck5">
-                                                <label class="form-check-label" for="defaultCheck5">
-                                                Agree terms
-                                                </label>
-                                            </div>
                                             <div class="form-check">
                                                 <a href="{% url 'login' %}" class="small text-right">Login</a>
                                             </div>
