--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -25,7 +25,7 @@
                                 <br />
                                 <p>
                                     {% if msg %}
-                                        {{ msg | safe }}
+                                        <p{% if error %} class="text-danger"{% endif %}>{{ msg | safe }}</p>
                                     {% else %}
                                         Add your credentials
                                     {% endif %}                                     
