--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -4,11 +4,11 @@
             <div class="user-card d-flex d-md-none align-items-center justify-content-between justify-content-md-center pb-4">
             <div class="d-flex align-items-center">
                 <div class="user-avatar lg-avatar mr-4">
-                <img src="/static/assets/img/team/profile-picture-3.jpg" class="card-img-top rounded-circle border-white" alt="Bonnie Green">
+                <img src="/static/assets/img/team/default-profile-picture.png" class="card-img-top rounded-circle border-white" alt="Bonnie Green">
                 </div>
                 <div class="d-block">
                 <h2 class="h6">
-                    {{ request.user.username }}
+                    {{ request.user.get_full_name }}
                 </h2>
                 <a href="{% url 'logout' %}" class="btn btn-secondary text-dark btn-xs">
                     <span class="mr-2"><span class="fas fa-sign-out-alt"></span></span>Sign Out</a>
