--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -58,8 +58,7 @@
 
                             <div class="d-flex justify-content-center align-items-center mt-4">
                                 <span class="font-weight-normal">
-                                    &copy; <a  href="https://themesberg.com" target="_blank">Themesberg</a> 
-                                    - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
+                                    &copy; AIprep 2024 - powered by Themesberg
                                 </span>
                             </div>
 
