--- a/correction/templates/show_corrections.html
+++ b/correction/templates/show_corrections.html
@@ -14,7 +14,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    <div class="card card-body bg-white border-light shadow-sm mb-4 min-vh-100">
+                    <div class="card card-body bg-white border-light shadow-sm mb-4 min-vh-100 d-flex flex-column justify-content-between">
                         <div class="table-responsive">
                   <table class="table table-centered table-nowrap mb-0 rounded text-center">
                       <thead class="thead-light">
@@ -34,7 +34,7 @@
                               <td colspan="6" class="text-center">There is no correction</td>
                               </tr>
                           {% else %}
-                              {% for correction in corrections %}
+                              {% for correction in corrections_object.object_list %}
                               <tr>
                                   <td class="border-0"><a href="#" class="text-primary font-weight-bold">{{ forloop.counter }}</a> </td>
                                   <td class="border-0 font-weight-bold">
@@ -70,11 +70,26 @@
                       </tbody>
                   </table>
               </div>
-                    </div>
+                <div class="d-flex justify-content-center pb-5">
+                    <nav aria-label="pagination of corrections">
+                      <ul class="pagination">
+                        <li class="page-item{% if not corrections_object.has_previous %} disabled{% endif %}">
+                          <a class="page-link" href="{%if corrections_object.has_previous%}{% url "show_corrections" %}?page={{ corrections_object.previous_page_number }}{% else %}#{% endif %}" tabindex="-1">Previous</a>
+                        </li>
+                        {% for page in page_range %}
+                            <li class="page-item{% if page == current_page %} bg-primary{% endif %}"><a class="page-link" href="{% url "show_corrections" %}?page={{ page }}">1</a></li>
+                        {% endfor %}
+                        <li class="page-item{% if not corrections_object.has_next %} disabled{% endif %}">
+                          <a class="page-link" href=href="{%if corrections_object.has_next%}{% url "show_corrections" %}?page={{ corrections_object.next_page_number }}{% else %}#{% endif %}">Next</a>
+                        </li>
+                      </ul>
+                    </nav>
                 </div>
             </div>
+        </div>
+    </div>
 
-        {% include 'includes/footer.html' %}
+    {% include 'includes/footer.html' %}
 
     </main>
 
