Change h-100vh to min-h-100vh in transactions.html

--- a/subscriptions/templates/transactions.html
+++ b/subscriptions/templates/transactions.html
@@ -11,7 +11,7 @@
 
         {% include 'includes/navigation.html' %}
 
-            <div class="card card-body border-light shadow-sm table-wrapper table-responsive pt-0 h-100vh">
+            <div class="card card-body border-light shadow-sm table-wrapper table-responsive pt-0 min-h-100vh">
                 <table class="table table-hover">
                     <thead>
                         <tr>
