Add "AIprep" to login and register pages

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -20,7 +20,7 @@
 
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Django Volt - Sign IN
+                                    AIprep - Sign IN
                                 </h1>
                                 <br />
                                 <p>
