--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -20,7 +20,7 @@
 
                             <div class="text-center text-md-center mb-4 mt-md-0">
                                 <h1 class="mb-0 h3">
-                                    Django Volt - Sign UP
+                                    AIprep - Sign UP
                                 </h1>
                                 <br />
                                 <p>
