Improve website's meta data

--- a/core/templates/layouts/base-fullscreen.html
+++ b/core/templates/layouts/base-fullscreen.html
@@ -26,25 +26,21 @@
 </title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="title" content="Volt - Free Bootstrap 5 Dashboard">
+<meta name="title" content="AIPrep - English Exam Preparation AI">
 <meta name="author" content="AIPrep">
-<meta name="description" content="Volt is a free and open source Bootstrap 5 Admin Dashboard featuring 11 example pages, 100 components and 3 plugins with Vanilla JS.">
-<meta name="keywords" content="bootstrap 5, bootstrap, bootstrap 5 admin dashboard, free bootstrap 5 dashboard, bootstrap 5 dashboard, bootstrap 5 charts, bootstrap 5 calendar, bootstrap 5 datepicker, bootstrap 5 tables, bootstrap 5 datatable, vanilla js datatable, themesberg, themesberg dashboard, themesberg admin dashboard" />
-<link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-volt">
+<meta name="description" content="AIPrep is a platform designed to enhance your English skills and provide comprehensive preparation for English language exams. Whether you're looking to improve your proficiency or get ready for tests, AIPrep offers many tools to support your learning journey.">
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://demo.themesberg.com/volt">
-<meta property="og:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="og:description" content="Volt is a free and open source Bootstrap 5 Admin Dashboard featuring 11 example pages, 100 components and 3 plugins with Vanilla JS.">
-<meta property="og:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-bootstrap-5-dashboard/volt-bootstrap-5-dashboard-preview.jpg">
+<meta property="og:url" content="https://panel.aiprep.ir">
+<meta property="og:title" content="AIPrep - English Exam Preparation AI">
+<meta property="og:description" content="AIPrep is a platform designed to enhance your English skills and provide comprehensive preparation for English language exams. Whether you're looking to improve your proficiency or get ready for tests, AIPrep offers many tools to support your learning journey.">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://demo.themesberg.com/volt">
-<meta property="twitter:title" content="Volt - Free Bootstrap 5 Dashboard">
-<meta property="twitter:description" content="Volt is a free and open source Bootstrap 5 Admin Dashboard featuring 11 example pages, 100 components and 3 plugins with Vanilla JS.">
-<meta property="twitter:image" content="https://themesberg.s3.us-east-2.amazonaws.com/public/products/volt-bootstrap-5-dashboard/volt-bootstrap-5-dashboard-preview.jpg">
+<meta property="twitter:url" content="https://panel.aiprep.ir">
+<meta property="twitter:title" content="AIPrep - English Exam Preparation AI">
+<meta property="twitter:description" content="AIPrep is a platform designed to enhance your English skills and provide comprehensive preparation for English language exams. Whether you're looking to improve your proficiency or get ready for tests, AIPrep offers many tools to support your learning journey.">
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="120x120" href="/static/assets/img/favicon/apple-touch-icon.png">
